# SPNTransitionProbability

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: aes_byte_mixture_transition_algorithm.h  aes_byte_transition_algorithm.h  aes_column_transition_algorithm.h  aes_dependency_vector.h  aes_row_and_column_transition_algorithm.h  byte_pattern_generator.h  column_pattern_generator.h  dependency_strategy.h  min_weight_dependency_strategy.h  prince_column_transition_algorithm.h  rijndael.h  small_aes_byte_transition_algorithm.h  small_aes_column_transition_algorithm.h  util.h
include/utils/: argparse.h
src/: aes_byte_mixture_transition_algorithm.cc  aes_byte_transition_algorithm.cc  aes_column_transition_algorithm.cc  aes_dependency_vector.cc  aes_row_and_column_transition_algorithm.cc  byte_pattern_generator.cc  column_pattern_generator.cc  min_weight_dependency_strategy.cc  prince_column_transition_algorithm.cc  small_aes_byte_transition_algorithm.cc  small_aes_column_transition_algorithm.cc  util.cc
tests/: test_aes_byte_mixture_transition_algorithm.cc  test_aes_byte_transition_algorithm.cc  test_aes_column_transition_algorithm.cc  test_aes_row_and_column_transition_algorithm.cc  test_all_aes_byte_transitions.cc  test_all_aes_column_transitions.cc  test_all_small_aes_byte_transitions.cc  test_all_small_aes_column_transitions.cc  test_byte_pattern_generator.cc  test_many_aes_column_transitions.cc  test_many_small_aes_column_transitions.cc  test_small_aes_byte_transition_algorithm.cc  transition_matrix.cc
